@@ -270,6 +270,37 @@ class TestCase::Sys::IO {
       IO->SEEK_END;
     }
     
+    {
+      my $file = "$test_dir/ftest/file_bytes8.txt";
+      my $fd = Sys::IO->open($file, IO->O_RDONLY);
+      
+      unless ($fd >= 0) {
+        return 0;
+      }
+
+      my $buffer = (mutable string)new_string_len 4;
+      my $count = 4;
+      
+      my $read_length = 0;
+      
+      my $cur_offset = Sys->sysseek($fd, 4, IO->SEEK_SET);
+      
+      unless ($cur_offset == 4) {
+        return 0;
+      }
+      
+      $read_length = Sys::IO->read($fd, $buffer, $count);
+      
+      unless ($buffer eq "efgh") {
+        return 0;
+      }
+      
+      unless ($read_length == 4) {
+        return 0;
+      }
+
+      Sys::IO->close($fd);
+    }
     return 1;
   }
 
