@@ -18,6 +18,7 @@
       + static method rewinddir : void ($dirp : Sys::IO::DirStream);
       + static method readdir : Sys::IO::Dirent ($dirp : Sys::IO::DirStream);
       + static method seek : int ($stream : Sys::IO::FileStream, $offset : long, $whence : int);
+      + static method sysseek : long ($fd : int, $offset : long, $whence : int);
       
 0.486 2023-09-06
   [Bug Fix]
